# Copyright 2018-2019 the Deno authors. All rights reserved. MIT license.
import("//build/config/host_byteorder.gni")
import("//build/toolchain/gcc_toolchain.gni")

declare_args() {
  rusty_v8_enable_simdutf = false
  rusty_v8_use_musl = false
  rusty_v8_musl_include_dir = ""
  rusty_v8_musl_system_include_dir = ""
  rusty_v8_musl_arch_include_dir = ""
  rusty_v8_musl_lib_dir = ""
  rusty_v8_musl_libcpp_config_site = ""
}

if (rusty_v8_use_musl) {
  assert(current_os == "linux")
  assert(current_cpu == "x64")
  assert(rusty_v8_musl_include_dir != "")
  assert(rusty_v8_musl_system_include_dir != "")
  assert(rusty_v8_musl_arch_include_dir != "")
  assert(rusty_v8_musl_lib_dir != "")
  assert(rusty_v8_musl_libcpp_config_site != "")

  _musl_clang_builtin_dir =
      rebase_path("$clang_base_path/lib/clang/$clang_version/include",
                  root_build_dir)
  _musl_include_dir = rebase_path(rusty_v8_musl_include_dir, root_build_dir)
  _musl_system_include_dir =
      rebase_path(rusty_v8_musl_system_include_dir, root_build_dir)
  _musl_arch_include_dir =
      rebase_path(rusty_v8_musl_arch_include_dir, root_build_dir)
  _musl_lib_dir = rebase_path(rusty_v8_musl_lib_dir, root_build_dir)
  _musl_libcpp_config_site =
      rebase_path(rusty_v8_musl_libcpp_config_site, root_build_dir)

  clang_toolchain("clang_x64_musl") {
    extra_asmflags = "--target=x86_64-unknown-linux-musl"
    extra_cppflags =
        "--target=x86_64-unknown-linux-musl -nostdinc " +
        "-Wno-unused-const-variable " +
        "-Wno-unused-function " +
        "-D_LIBCPP_HAS_MUSL_LIBC=1 " +
        "-include ${_musl_libcpp_config_site} " +
        "-isystem ${_musl_include_dir} " +
        "-isystem ${_musl_system_include_dir} " +
        "-isystem ${_musl_arch_include_dir} " +
        "-isystem ${_musl_clang_builtin_dir}"
    extra_ldflags =
        "--target=x86_64-unknown-linux-musl -fuse-ld=lld " +
        "-L${_musl_lib_dir} -Wl,-dynamic-linker,/lib/ld-musl-x86_64.so.1"
    toolchain_args = {
      current_cpu = "x64"
      current_os = "linux"
      use_sysroot = false
    }
  }
}

static_library("rusty_v8") {
  complete_static_lib = true
  sources = [
    "src/binding.cc",
    "src/crdtp_binding.cc",
  ]
  deps = [
    "//build/config:shared_library_deps",
    "//v8:v8",
    "//v8:v8_libbase",
    "//v8:v8_libplatform",
    "//v8/third_party/inspector_protocol:crdtp",
    "//src/deno_inspector:deno_inspector_protocol",
  ]
  if (rusty_v8_enable_simdutf) {
    deps += [ "//third_party/simdutf:simdutf" ]
  }
  configs -= [
    "//build/config/compiler:default_init_stack_vars",
    "//build/config/compiler:thin_archive",
  ]
  configs += [ ":rusty_v8_config" ]
}

config("rusty_v8_config") {
  configs = [
    "//v8:external_config",
    "//v8:toolchain",
    "//v8:features",
  ]
  cflags = []
  if (is_win) {
    # The `/Zl` ("omit default library name") flag makes the compiler produce
    # object files that can link with both the static and dynamic CRT.
    cflags += [ "/Zl" ]
  }

  # We need these directories in the search path to be able to include some
  # internal V8 headers.
  include_dirs = [
    ".",
    "v8",
    ".",
    "$target_gen_dir",
    "$target_gen_dir/v8",
    "$target_gen_dir/src/inspector",
    "$target_gen_dir/src/deno_inspector",
  ]

  defines = []
  if (is_debug) {
    defines += [ "DEBUG" ]
  }

  if (rusty_v8_enable_simdutf) {
    defines += [ "RUSTY_V8_ENABLE_SIMDUTF" ]
  }

  if (is_clang) {
    cflags += [
      "-fcolor-diagnostics",
      "-fansi-escape-codes",
    ]
  }
}
